# my-doctr-ocr

./: .gitignore  README.md  config.yaml  config_det.yaml  config_rec.yaml  det.sh  main.py  pyproject.toml  train_det.py  train_rec.py
app/: dataset.py  module.py  util.py
det/: dataset.py  module.py  train_det.py
det_old/: dataset.py  train_det.py  utils.py
rec/: module.py  util.py
